Remove unused imagemap attributes
A number of link tags had the obsolete <a shape> attribute, apparently copy-and-pasted from code which was used inside an image map. We don’t use image maps anywhere on the site.

--- a/core/templates/includes/issue_pages_ctrl.html
+++ b/core/templates/includes/issue_pages_ctrl.html
@@ -5,7 +5,7 @@
 
 |
 {% if issue.previous %}
-<a href="{% url 'chronam_issue_pages' issue.previous.title.lccn issue.previous.date_issued issue.previous.edition %}" shape="rect"><strong>Previous Issue</strong></a>
+<a href="{% url 'chronam_issue_pages' issue.previous.title.lccn issue.previous.date_issued issue.previous.edition %}"><strong>Previous Issue</strong></a>
 {% else %}
 <span class="off">Previous Issue</span>
 {% endif %}
