--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -9,18 +9,18 @@
 
 <div id="std_box">
     <ul>
-        <li class="down"><a href="#faq" shape="rect">FAQs</a></li>
-        <li class="down"><a href="#how_to_view" shape="rect">How to View</a> </li>
-        <li class="down"><a href="#basic_searching" shape="rect">Basic Searching in <i>Chronicling America</i></a> </li>
-        <li class="down"><a href="#advanced_searching" shape="rect">Advanced Searching in <i>Chronicling America</i></a> </li>
-        <li class="down"><a href="#search_and_browsing_tips" shape="rect">Search and Browsing Tips</a> </li>
-        <li class="down"><a href="#language_searching" shape="rect">Searching by Language in <i>Chronicling America</i></a> </li>
-        <li class="down"><a href="#searching_directory" shape="rect">Searching the U.S. Newspaper Directory 1690-Present</a> </li>
+        <li class="down"><a href="#faq">FAQs</a></li>
+        <li class="down"><a href="#how_to_view">How to View</a> </li>
+        <li class="down"><a href="#basic_searching">Basic Searching in <i>Chronicling America</i></a> </li>
+        <li class="down"><a href="#advanced_searching">Advanced Searching in <i>Chronicling America</i></a> </li>
+        <li class="down"><a href="#search_and_browsing_tips">Search and Browsing Tips</a> </li>
+        <li class="down"><a href="#language_searching">Searching by Language in <i>Chronicling America</i></a> </li>
+        <li class="down"><a href="#searching_directory">Searching the U.S. Newspaper Directory 1690-Present</a> </li>
     </ul>
 
 <br />
 
-<h2><a id="faq" class="help" shape="rect">Frequently Asked Questions (FAQs)</a></h2>
+<h2><a id="faq" class="help">Frequently Asked Questions (FAQs)</a></h2>
 
 <h4>What is the U.S. Newspaper Directory?</h4>
 <p>The U.S. Newspaper Directory is derived from the library catalog records created by state institutions during the NEH-sponsored <a href="https://www.neh.gov/us-newspaper-program">United States Newspaper Program</a>, 1980-2011. This program funded state-level projects to locate, describe (catalog), and selectively preserve (via treatment and microfilm) historic newspaper collections in that state, published from 1690 to the present. Under this program, each institution created machine-readable cataloging (MARC) records via the Cooperative ONline SERials Program (CONSER) for its state collections, contributing bibliographic descriptions and library holdings information to the Newspaper Union List, now included in WorldCat and hosted by the Online Computer Library Center (OCLC). This data, approximately 150,000 bibliographic title entries and hundreds of thousands of library holdings records, was acquired and converted to MARCXML format for use in the  <i>Chronicling America</i> U.S. Newspaper Directory.</p>
@@ -38,17 +38,17 @@
 <p>Although errors in the process are unavoidable, OCR is still a powerful tool for making text-based items accessible to searching. For example, important concept words often appear more than once within an article. Therefore, if OCR misreads one instance of a key word in a passage, but correctly reads the second instance, the passage will still be found in a full-text search.</p>
 
 <h4>Why are there variant spellings of counties and cities in the Newspaper Directory Search?</h4>
-<p>The Newspaper Directory data is loaded dynamically from the <i>Chronicling America</i> directory records. Misspellings in place names are the result of typographical errors in the CONSER records and can only be corrected in the original CONSER records hosted by OCLC WorldCat. Please contact a CONSER member <a href="https://www.loc.gov/acq/conser/conmembs.html" shape="rect">(https://www.loc.gov/acq/conser/conmembs.html)</a> with library holdings of that title to request cataloging improvements to these records.</p>
+<p>The Newspaper Directory data is loaded dynamically from the <i>Chronicling America</i> directory records. Misspellings in place names are the result of typographical errors in the CONSER records and can only be corrected in the original CONSER records hosted by OCLC WorldCat. Please contact a CONSER member <a href="https://www.loc.gov/acq/conser/conmembs.html">(https://www.loc.gov/acq/conser/conmembs.html)</a> with library holdings of that title to request cataloging improvements to these records.</p>
 
 <h4>Why do diacritics and non-English language characters sometimes appear &quot;Romanized&quot; or not in their original alphabets?</h4>
 <p>The Newspaper Directory provides access to newspaper title records cataloged according to standard bibliographic rules. Until recently, most non-English language characters were difficult to represent in library records and so Romanization - or standard rules for transliterating other alphabets to the Roman alphabet - was used to convey phonetic pronunciations of non-English words.</p>
 
 <h4>I&#39;ve discovered a Directory newspaper title record in need of updating or editing, what should I do?</h4>
-<p>Newspaper title information included in <i>Chronicling America</i> is downloaded at regular intervals from the CONSER (Cooperative Online Serials Cataloging) database, made available through OCLC WorldCat. In order to update or edit these records in <i>Chronicling America</i>, please contact a CONSER member <a href="https://www.loc.gov/acq/conser/conmembs.html" shape="rect">(https://www.loc.gov/acq/conser/conmembs.html)</a> with library holdings of that title to request cataloging improvements to the original
+<p>Newspaper title information included in <i>Chronicling America</i> is downloaded at regular intervals from the CONSER (Cooperative Online Serials Cataloging) database, made available through OCLC WorldCat. In order to update or edit these records in <i>Chronicling America</i>, please contact a CONSER member <a href="https://www.loc.gov/acq/conser/conmembs.html">(https://www.loc.gov/acq/conser/conmembs.html)</a> with library holdings of that title to request cataloging improvements to the original
 CONSER/WorldCat records.</p>
 
 <h4>How do I cite or reference newspaper Directory records and pages for re-use (e.g., in a Web site or other electronic display) or reference (e.g., in a bibliography or journal article) external to <i>Chronicling America</i>?</h4>
-<p><i>Chronicling America</i> supports persistent links to newspaper Directory records and pages by providing a predictable URL, displayed in the descriptive information for that object. Using the proposed <a href="http://bitworking.org/projects/URI-Templates/draft-gregorio-uritemplate-00.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">URI Template</a> syntax the links will use the pattern:   </p>
+<p><i>Chronicling America</i> supports persistent links to newspaper Directory records and pages by providing a predictable URL, displayed in the descriptive information for that object. Using the proposed <a href="http://bitworking.org/projects/URI-Templates/draft-gregorio-uritemplate-00.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);">URI Template</a> syntax the links will use the pattern:   </p>
 <ul><li>https://chroniclingamerica.loc.gov/lccn/{lccn}/{date}/ed-{edition}/seq-{image sequence}</li></ul>
 <p>Where:</p>
 <ul><li><i>lccn</i> is the # Library of Congress Control Number for the newspaper</li><li><i>date</i> is the date of the issue, specified as yyyy-mm-dd (e.g. 1902-01-30)</li><li><i>edition</i> is the edition number for that date (e.g. 1)</li><li><i>seq</i> is the image sequence number (e.g. 23) for that issue.</li></ul>
@@ -57,7 +57,7 @@ CONSER/WorldCat records.</p>
 <p>When describing <i>Chronicling America</i> as the source of content, please use the URL and a Web site citation, such as &quot;from the Library of Congress, <i>Chronicling America</i>: Historic American Newspapers site&quot;.</p>
 <br />
 
-<h2><a id="how_to_view" class="help" shape="rect">How to View</a></h2>
+<h2><a id="how_to_view" class="help">How to View</a></h2>
 <p>Images of historic newspaper pages, as well as uncorrected page text, are displayed through your web browser.  However, <i>Chronicling America</i> also contains high-resolution images (JPEG2000) and enhanced text (PDF) that may require special viewers. Most viewers can be downloaded free from vendor sites. The links below explain the various formats used and how to access them.</p>
 
 <h3>Download and View Pages Offline</h3>
@@ -65,8 +65,8 @@ CONSER/WorldCat records.</p>
     <tr>
         <td rowspan="1" colspan="1">PDF <br/>(Portable Document Format, .pdf)</td>
         <td rowspan="1" colspan="1">Used for page images</td>
-        <td rowspan="1" colspan="1"><a href="http://www.adobe.com/products/acrobat/readstep2.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect"> Adobe Acrobat Reader</a><br/><br/><a href="http://www.adobe.com/products/acrobat/alternate.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect"> Adobe text-only download page</a></td>
-        <td rowspan="1" colspan="1">- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.pdf" shape="rect">Sample PDF</a><br/>- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td></tr>
+        <td rowspan="1" colspan="1"><a href="http://www.adobe.com/products/acrobat/readstep2.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);"> Adobe Acrobat Reader</a><br/><br/><a href="http://www.adobe.com/products/acrobat/alternate.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);"> Adobe text-only download page</a></td>
+        <td rowspan="1" colspan="1">- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.pdf">Sample PDF</a><br/>- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1">About this sample</a></td></tr>
     <tr>
         <td rowspan="1" colspan="1">JPEG2000<br/>(.jp2)</td>
         <td rowspan="1" colspan="1">
@@ -74,19 +74,19 @@ CONSER/WorldCat records.</p>
             - Tiling supports decompression of only that portion of the image requested by the user<br/><br/>
             - Compression ratio is approximately 20:1, depending on image content and color depth</td>
         <td rowspan="1" colspan="1">Windows:<br/>
-            - <a href="http://www.erdas.com/products/ERDASERMapper/ERDASERViewer/Details.aspx" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">ERDAS ER Viewer</a><br/>
-            - <a href="http://www.kakadusoftware.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">Kdu_show</a><br/>
-            - <a href="http://www.irfanview.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);" shape="rect">IrfanView with JPEG2000 plug-in</a><br/><br/>OS X:Preview supports baseline JP2 only; commercial software may be needed to view tiled JP2 files, such as those in <i>Chronicling America</i>.</td>
+            - <a href="http://www.erdas.com/products/ERDASERMapper/ERDASERViewer/Details.aspx" onmouseup="return linkDisclaimer.rewriteAnchor(this);">ERDAS ER Viewer</a><br/>
+            - <a href="http://www.kakadusoftware.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);">Kdu_show</a><br/>
+            - <a href="http://www.irfanview.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);">IrfanView with JPEG2000 plug-in</a><br/><br/>OS X:Preview supports baseline JP2 only; commercial software may be needed to view tiled JP2 files, such as those in <i>Chronicling America</i>.</td>
         <td rowspan="1" colspan="1">
-            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.jp2" shape="rect">Sample JPEG2000 page</a><br/>
-            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1" shape="rect">About this sample</a></td>
+            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.jp2">Sample JPEG2000 page</a><br/>
+            - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1">About this sample</a></td>
     </tr>
 </table>
 <p>Some Web browsers incorrectly assume that Quicktime (automatically included with the browser software) can display a JPEG2000 image (JPEG2000, or .jp2, is not a &quot;native&quot; Web format.) To counteract this effect, download the JPEG2000 (JP2) image by &quot;right-click*quot;-ing with the mouse on the image link --e.g., &quot;JP2 (4.0 Mb)&quot;. In the dialog box that appears, you will see &quot;Save Link As...&quot; or &quot;Save Target As...&quot; (depending on the Web browser used). Selecting this option will result in downloading the image to your desktop for further review.</p>
 <p>To view the JPEG2000 (.jp2) file you will need a JPEG2000-friendly software, such as those listed above.</p><br/>
 
-<h2><a id="basic_searching" class="help" shape="rect">Basic Searching in Chronicling America</a></h2>
-<p><i>Chronicling America</i> provides access to historic newspaper pages digitized under the NEH/LC National Digital Newspaper Program (NDNP). For more information on the scope and content of the program, click here <a href="https://www.neh.gov/projects/ndnp.html" shape="rect">(https://www.neh.gov/projects/ndnp.html).</a></p>
+<h2><a id="basic_searching" class="help">Basic Searching in Chronicling America</a></h2>
+<p><i>Chronicling America</i> provides access to historic newspaper pages digitized under the NEH/LC National Digital Newspaper Program (NDNP). For more information on the scope and content of the program, click here <a href="https://www.neh.gov/projects/ndnp.html">(https://www.neh.gov/projects/ndnp.html).</a></p>
 <p>Search <i>Chronicling America</i> to find</p>
 <ul>
     <li>information on persons, places, or events;</li>
@@ -113,7 +113,7 @@ CONSER/WorldCat records.</p>
 <p><i>Chronicling America</i>&#39;s search engine utilizes language-specific dictionaries toinclude word variants for your search terms.  This is often called stemming.  For example, the search term <b>house</b>, when stemmed in English, would also return words like <b>houses</b> and <b>housing</b>.  </p>
 <p>For more search options, see Advanced Searching in <i>Chronicling America</i> below.  For information about language support in <i>Chronicling America</i>, see Searching by Language in <i>Chronicling America</i>.</p>
 
-<h2><a id="advanced_searching" class="help" shape="rect">Advanced Searching in Chronicling America</a></h2>
+<h2><a id="advanced_searching" class="help">Advanced Searching in Chronicling America</a></h2>
 <p>To make the most of searching this text, take advantage of the search options provided on the Search page.</p>
 <ul>
     <li>To limit your search to particular geographic area, select one or more States.</li>
@@ -161,7 +161,7 @@ CONSER/WorldCat records.</p>
 <p>For example, the term &quot;normal school&quot; was used in the early twentieth century to describe schools for training teachers. Searching for the phrase may eliminate results containing the words &quot;normal&quot; and &quot;school&quot; in unrelated ways.</p>
 <p>Note: Some very common words, such as and, of, the, a, and to, are ignored even when matching exact phrases.</p>
 
-<h2><a id="search_and_browsing_tips" class="help" shape="rect">Search and Browsing Tips</a></h2>
+<h2><a id="search_and_browsing_tips" class="help">Search and Browsing Tips</a></h2>
 <ul>
     <li>Many browsers have the capability of tabbed browsing, which opens a new pane in the current window, either in the background or the foreground. Users of Chronicling America have reported this as a useful method of navigating through search results- bringing up each result in a new tab. This may be accomplished by clicking with the right-hand mouse button (for Mac, hold down the Command key) and selecting &quot;Open Link in New Tab.&quot; </li>
     <li>Search results are displayed on a page that can easily be bookmarked or navigated to via the &quot;Back&quot; button on the browser. Every page in the <i>Chronicling America</i> application can be bookmarked, but only the addresses containing newspaper pages should be treated as canonical for purposes of citations and long-term referrals.  These addresses are displayed in the address bar of the browser, and no special treatment is required for adding them to a citation database. (Select the &quot;Persistent Link&quot; URL displayed on each newspaper page view to store the link without search text highlighted.)</li>
@@ -181,7 +181,7 @@ CONSER/WorldCat records.</p>
     <li>If you have any questions about this information or any other aspects of  <i>Chronicling America</i>, contact the Newspaper and Current Periodicals Reading room via LC&#39;s &quot;Ask a Librarian&quot; service, https://www.loc.gov/rr/askalib/ask-news.html.</li>
 </ul>
 
-<h2><a id="language_searching" class="help" shape="rect">Searching by Language Chronicling America</a></h2>
+<h2><a id="language_searching" class="help">Searching by Language Chronicling America</a></h2>
 <p><i>Chronicling America</i> supports language-specific searching and analysis (stemming, stop words, etc.) whenever supported by the indexing tools in use at the Library of Congress. By default, in both Basic and Advanced Search, all content is searched together regardless of language. To limit searches to a specific language, select Advanced Search and choose the appropriate language from the Language drop-down menu. (Note: not all languages that appear in the newspapers have language-specific analysis tools (stemming, stop words, etc.) implemented.  For additional technical information on how languages are encoded and identified for search, see current NDNP Technical Guidelines at <a href="https://www.loc.gov/ndnp/guidelines/">https://www.loc.gov/ndnp/guidelines/</a>.</p>
 
 <h3>Why use language-specific search?</h3>
@@ -189,7 +189,7 @@ CONSER/WorldCat records.</p>
 </p>
 <p>Other reasons for language-specific search may be more content related. For example, reporting in Spanish about the building of the Panama Canal may convey a different perspective than reporting in the mainstream English-speaking press. </p>
 
-<h2><a id="searching_directory" class="help" shape="rect">Searching the U.S. Newspaper Directory 1690-Present</a></h2>
+<h2><a id="searching_directory" class="help">Searching the U.S. Newspaper Directory 1690-Present</a></h2>
 <p>First, review the <b>Basic and Advanced Searching</b> information above. The <i>Chronicling America</i> Newspaper Directory contains more than 150,000 serial title records for historic newspapers published in the United States from 1690 to the present. Also included are hundreds of thousands of Local Data Records indicating which libraries hold which copies and in what format. These records are created and edited by members of the Cooperative Online Serials (CONSER) cataloging program and currently hosted in the OCLC WorldCat bibliographic catalog. A copy of these records has been included in <i>Chronicling America</i>. Updated CONSER records will be added to <i>Chronicling America</i> at regular intervals utilizing the OCLC WorldCat Search API.</p>
 <p>Users can search the Newspaper Directory in a variety of ways, utilizing the data encoded by CONSER catalogers. Search results rely on the unedited CONSER data as it was created in the MARC format.</p>
 <p>Keyword searching will match words that appear in most narrative fields, including newspaper history essays associated with each digitized title. For example, matching an exact phrase, using quotes around the words in the Keyword field, can also be useful if you know a standard Library of Congress subject heading, such as "Anarchism--Newspapers" or "penny papers".</p>
