Only set rel=canonical when appropriate
Previously rel=canonical was set to the base site URL on every page, and
twice on the page view. Now only the homepage gets it set as the root
URL and page will only set it once.

--- a/loc/templates/home.html
+++ b/loc/templates/home.html
@@ -6,6 +6,7 @@
 
 {% block extrahead %}
     <link rel="preload" as="fetch" href="/tabs">
+    <meta rel="canonical" href="https://chroniclingamerica.loc.gov/" />
     {{ block.super }}
 {% endblock extrahead %}
 
