Set rel=noindex on search results pages
There's no benefit to Google indexing these since all of the data is
present on the actual item pages or the various navigation pages for
things like titles, places, etc.

--- a/core/templates/search_titles_results.html
+++ b/core/templates/search_titles_results.html
@@ -2,6 +2,8 @@
 {% load static from staticfiles %}
 
 {% block extrahead %}
+    <meta name="robots" content="noindex">
+
     {% if page.has_previous %}
     <link rel="prev" href="https://{{host}}{% url 'chronam_search_titles_results' %}{{previous_url}}" />
     {% endif %}
