Set a more informative filename for clipping downloads
This uses the <a download> attribute and the Content-Disposition header
to set a filename which includes the LCCN, date, edition, sequence, etc.

--- a/loc/templates/page_print.html
+++ b/loc/templates/page_print.html
@@ -18,7 +18,7 @@
                     <strong>Print this image</strong>
                 </a>
                 |
-                <a class="clip_download" download href="{{ download_url }}">
+                <a class="clip_download" download="{{ download_filename }}" href="{{ download_url }}?response-content-disposition={% filter urlencode %}attachment; filename="{{ download_filename }}"{% endfilter %}">
                     <strong>
                         Download this image
                     </strong>
