--- a/loc/templates/page.html
+++ b/loc/templates/page.html
@@ -4,11 +4,6 @@
 {% block javascript %}
     {{ block.super }}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.1/openseadragon.min.js" integrity="sha256-qIiBj8XqCj196KLyEX8fBJ0HiHUZmXYmYFciVQZ7nls=" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="{% static 'vendor/jquery.ba-bbq.min.js' %}"></script>
-    <script src="{% static 'js/search.js' %}"></script>
-    <script type="text/javascript" src="{% static 'js/page.js' %}"></script>
-
     <div id="page_data"
 	    data-static_url="{% static '' %}images/"
 	    data-width="{{ page.jp2_width|default_if_none:'' }}"
@@ -19,6 +14,11 @@
 	    data-coordinates_url="{% url 'chronam_page_coordinates' page.issue.title.lccn page.issue.date_issued page.issue.edition page.sequence %}"
 	    data-navigation_url="{% url 'chronam_search_pages_navigation' %}?"
 	></div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/openseadragon/2.4.1/openseadragon.min.js" integrity="sha256-qIiBj8XqCj196KLyEX8fBJ0HiHUZmXYmYFciVQZ7nls=" crossorigin="anonymous"></script>
+    <script src="{% static 'vendor/jquery.ba-bbq.min.js' %}"></script>
+    <script src="{% static 'js/search.js' %}"></script>
+    <script src="{% static 'js/page.js' %}"></script>
 
     <noscript><!-- without javascript the pageviewer does not work; display OCR in this case instead. -->
         <h3>Newspaper Page Text</h3>
