Add Chronicling America Data Visualizations link

--- a/loc/templates/site_base_alt.html
+++ b/loc/templates/site_base_alt.html
@@ -8,6 +8,7 @@
       <li><a href="{% url 'chronam_about' %}">About Chronicling America</a></li>
       <li><a href="{% url 'chronam_about_api' %}">About the Site and API</a></li>
       <li><a href="https://www.loc.gov/rr/news/topics/topics.html">Recommended Topics</a></li>
+      <li><a href="https://www.loc.gov/ndnp/data-visualizations/">Chronicling America Data Visualizations</a></li>
       <li><a href="{% url 'chronam_help' %}">Help</a></li>
     </ul>
   </div>
