Help: update URI Template link
Link to RFC 6570 rather than an old draft

--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -48,7 +48,7 @@
 CONSER/WorldCat records.</p>
 
 <h4>How do I cite or reference newspaper Directory records and pages for re-use (e.g., in a Web site or other electronic display) or reference (e.g., in a bibliography or journal article) external to <i>Chronicling America</i>?</h4>
-<p><i>Chronicling America</i> supports persistent links to newspaper Directory records and pages by providing a predictable URL, displayed in the descriptive information for that object. Using the proposed <a href="http://bitworking.org/projects/URI-Templates/draft-gregorio-uritemplate-00.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);">URI Template</a> syntax the links will use the pattern:   </p>
+<p><i>Chronicling America</i> supports persistent links to newspaper Directory records and pages by providing a predictable URL, displayed in the descriptive information for that object. Using the <a href="https://tools.ietf.org/html/rfc6570">URI Template</a> syntax described in RFC 6570 the links will use the pattern:</p>
 <ul><li>https://chroniclingamerica.loc.gov/lccn/{lccn}/{date}/ed-{edition}/seq-{image sequence}</li></ul>
 <p>Where:</p>
 <ul><li><i>lccn</i> is the # Library of Congress Control Number for the newspaper</li><li><i>date</i> is the date of the issue, specified as yyyy-mm-dd (e.g. 1902-01-30)</li><li><i>edition</i> is the edition number for that date (e.g. 1)</li><li><i>seq</i> is the image sequence number (e.g. 23) for that issue.</li></ul>
