Help: remove broken legacy JavaScript
The link disclaimer JavaScript referenced doesn't exist any more but since it failed quietly nobody noticed.

--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -65,7 +65,7 @@ CONSER/WorldCat records.</p>
     <tr>
         <td rowspan="1" colspan="1">PDF <br/>(Portable Document Format, .pdf)</td>
         <td rowspan="1" colspan="1">Used for page images</td>
-        <td rowspan="1" colspan="1"><a href="http://www.adobe.com/products/acrobat/readstep2.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);"> Adobe Acrobat Reader</a><br/><br/><a href="http://www.adobe.com/products/acrobat/alternate.html" onmouseup="return linkDisclaimer.rewriteAnchor(this);"> Adobe text-only download page</a></td>
+        <td rowspan="1" colspan="1"><a href="http://www.adobe.com/products/acrobat/readstep2.html"> Adobe Acrobat Reader</a><br/><br/><a href="http://www.adobe.com/products/acrobat/alternate.html"> Adobe text-only download page</a></td>
         <td rowspan="1" colspan="1">- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.pdf">Sample PDF</a><br/>- <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1">About this sample</a></td></tr>
     <tr>
         <td rowspan="1" colspan="1">JPEG2000<br/>(.jp2)</td>
@@ -74,9 +74,9 @@ CONSER/WorldCat records.</p>
             - Tiling supports decompression of only that portion of the image requested by the user<br/><br/>
             - Compression ratio is approximately 20:1, depending on image content and color depth</td>
         <td rowspan="1" colspan="1">Windows:<br/>
-            - <a href="http://www.erdas.com/products/ERDASERMapper/ERDASERViewer/Details.aspx" onmouseup="return linkDisclaimer.rewriteAnchor(this);">ERDAS ER Viewer</a><br/>
-            - <a href="http://www.kakadusoftware.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);">Kdu_show</a><br/>
-            - <a href="http://www.irfanview.com" onmouseup="return linkDisclaimer.rewriteAnchor(this);">IrfanView with JPEG2000 plug-in</a><br/><br/>OS X:Preview supports baseline JP2 only; commercial software may be needed to view tiled JP2 files, such as those in <i>Chronicling America</i>.</td>
+            - <a href="http://www.erdas.com/products/ERDASERMapper/ERDASERViewer/Details.aspx">ERDAS ER Viewer</a><br/>
+            - <a href="http://www.kakadusoftware.com">Kdu_show</a><br/>
+            - <a href="http://www.irfanview.com">IrfanView with JPEG2000 plug-in</a><br/><br/>OS X:Preview supports baseline JP2 only; commercial software may be needed to view tiled JP2 files, such as those in <i>Chronicling America</i>.</td>
         <td rowspan="1" colspan="1">
             - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1.jp2">Sample JPEG2000 page</a><br/>
             - <a href="https://chroniclingamerica.loc.gov/lccn/sn84024441/1901-12-16/ed-1/seq-1">About this sample</a></td>
