Update LC “Ask a Librarian” link

--- a/core/templates/help.html
+++ b/core/templates/help.html
@@ -178,7 +178,7 @@ CONSER/WorldCat records.</p>
         </ul>
         <p>A good and historically significant example of missing issues is in the <i>San Francisco Call</i>, where the April 19th and April 20th issues from 1906 are missing due to the devastating San Francisco earthquake that prevented the newspaper from publishing on those days.  In this example, the &quot;not digitized, not published&quot; indicator displays as such: <a href="https://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/">https://chroniclingamerica.loc.gov/lccn/sn85066387/1906-04-19/ed-1/</a>.</p>
     </li>
-    <li>If you have any questions about this information or any other aspects of  <i>Chronicling America</i>, contact the Newspaper and Current Periodicals Reading room via LC&#39;s &quot;Ask a Librarian&quot; service, https://www.loc.gov/rr/askalib/ask-news.html.</li>
+    <li>If you have any questions about this information or any other aspects of  <i>Chronicling America</i>, contact the Newspaper and Current Periodicals Reading room via LC&#39;s &quot;Ask a Librarian&quot; service, <a href="https://ask.loc.gov/">https://ask.loc.gov/</a>.</li>
 </ul>
 
 <h2><a id="language_searching" class="help">Searching by Language Chronicling America</a></h2>
