--- a/core/templates/about.html
+++ b/core/templates/about.html
@@ -7,13 +7,57 @@
 
 {% block main_content %}
  <div id="std_box">
+  <h2>Introduction</h2>
   <!--div class="about_pic_box"><a href="#"><img src="images/logo_neh.gif" width="210" height="101" alt="neh" /></a><br /><a href="#"><img class="loc" src="images/logo_loc.gif" width="215" height="47" alt="Library of Congress" /></a></div-->
   <p>Chronicling America (ISSN 2475-2703) is a Website providing access to information about historic newspapers and select digitized newspaper pages, and is produced by the National Digital Newspaper Program (NDNP). NDNP, a partnership between the National Endowment for the Humanities (NEH) and the Library of Congress (LC), is a long-term effort to develop an Internet-based, searchable database of U.S. newspapers with descriptive information and select digitization of historic pages. Supported by NEH, this rich digital resource will be developed and permanently maintained at the Library of Congress. An NEH award program will fund the contribution of content from, eventually, all U.S. states and territories.</p>
   <p>More information on program guidelines, participation, and technical information can be found at <a href="https://www.neh.gov/projects/ndnp.html">https://www.neh.gov/projects/ndnp.html</a> or <a href="https://www.loc.gov/ndnp/">https://www.loc.gov/ndnp/</a>.</p>
 
   <h2>Building the Digital Collection</h2>
-  <h3><a id="newspaper_title_directory">Newspaper Title Directory</a></h3>
-  <p>The Newspaper Title Directory is derived from the library catalog records created by state institutions during the NEH-sponsored United States Newspaper Program (<a href="https://www.neh.gov/projects/usnp.html">https://www.neh.gov/projects/usnp.html</a>), 1982-2011. This program funded state-level projects to locate, describe (catalog), and selectively preserve (via treatment and microfilm) historic newspaper collections in that state, published from 1690 to the present. Under this program, each institution created machine-readable cataloging (MARC) via the Cooperative ONline SERials Program (CONSER) for its state collections, contributing bibliographic descriptions and library holdings information to the Newspaper Union List, hosted by the Online Computer Library Center (OCLC).  This data, approximately 140,000 bibliographic title entries and 600,000 separate library holdings records, was acquired and converted to MARCXML format for use in the Chronicling America Newspaper Title Directory. Contact a CONSER member for updates and corrections to bibliographic records (see <a href="https://www.loc.gov/acq/conser/conmembs.html">https://www.loc.gov/acq/conser/conmembs.html</a> ) through CONSER. The Chronicling America Directory bibliographic records are updated annually from the CONSER dataset hosted by OCLC.</p>
+  <h3>Jump to:</h3>
+  <ul class="anchor">
+  <li><a href="#directory">U.S. Newspaper Directory</a></li>
+  <li><a href="#supplemental-description">Supplemental Description</a></li>
+  <li><a href="#digitized-pages">Selected Digitized Newspaper Pages</a></li>
+  <li><a href="#repository">Preservation Data Repository and Dissemination Application</a></li>
+  <li><a href="#related-resources">Related Resources</a></li>
+  <li><a href="#rights">Rights and Reproductions</a></li>
+  </ul>
+   
+  <a name="directory"></a>  
+  <h3><a id="newspaper_title_directory">U.S. Newspaper Directory</a></h3>
+  <p>The U.S. Newspaper Directory records are derived from the library catalog records created by state institutions during the NEH-sponsored United States Newspaper Program (<a href="https://www.neh.gov/projects/usnp.html">https://www.neh.gov/projects/usnp.html</a>), 1982-2011. This program funded state-level projects to locate, describe (catalog), and selectively preserve (via treatment and microfilm) historic newspaper collections in that state, published from 1690 to the present. Under this program, each institution created machine-readable cataloging (MARC) via the Cooperative ONline SERials Program (CONSER) for its state collections, contributing bibliographic descriptions and library holdings information to the Newspaper Union List, hosted by the Online Computer Library Center (OCLC).  This data, approximately 150,000 bibliographic title entries as well as library holdings records created under USNP, was acquired and converted to MARCXML format for use in the U.S. Newspaper Directory. Contact a CONSER member for updates and corrections to bibliographic records (see <a href="https://www.loc.gov/acq/conser/conmembs.html">https://www.loc.gov/acq/conser/conmembs.html</a> ) through CONSER. The U.S. Newspaper Directory bibliographic records are updated annually from the CONSER dataset hosted by OCLC.</p>
+  <p class="backtotop"><a href="#skip_menu">Top</a></p>
+     
+  <a name="supplemental-description"></a>     
+  <h3><a id="supplemental_description">Supplemental Description</a></h3>
+  <p>In addition to standardized description based on existing cataloging records, newspapers that have been selected for digitization by NDNP state partners are accompanied by supplementary description (also known as “title essays”). These essays contain basic information about the paper, including:</p>
+   
+  <ul>
+  <li>place of publication (if not already evident); </li>
+  <li>dates and schedule of publication (e.g., weekly, daily, morning, or evening); </li>
+  <li>geographic area covered and circulation statistics; </li>
+  <li>political, religious, or other affiliation and reason for publication; </li>
+  <li>specialized audiences; </li>
+  <li>physical attributes; </li>
+  <li>changes in name, format, and ownership. </li>
+  </ul>
+   
+  <p>In addition, title essays usually discuss: </p>
+     
+  <ul>
+  <li>editors, publishers, or reporters of note; </li>
+  <li>significant events covered by the paper in the relevant time period (a short quote from the paper itself can help provide a sense of the paper's voice); </li>
+  <li>special features such as poetry or fiction, women’s section, sports, society, etc.; </li>
+  <li>relationships with other area newspapers; </li>
+  <li>innovations or advances in newspaper production and technology. </li>
+  </ul>   
+   
+  <p>These brief essays appear as part of the descriptive title information, NDNP state partners research and write these essays specifically for Chronicling America. The Division of Preservation and Access of the National Endowment of the Humanities review the essays as part of the NDNP partnership. The essays are intended as starting points for additional research and understanding of the historical role of each newspaper. </p>
+  <p>Newspapers that have title essays are identified in the <a href="https://chroniclingamerica.loc.gov/newspapers/">All Digitized Newspapers list</a> where the “More Info” value is “Yes.” The content of the essays can be searched through the U.S. Newspaper Directory search form, using the “keyword” search. Results will link to records that include those keywords. </p>
+  <p>Historical newspapers reflect the language and attitudes of their time, and may contain biased, offensive, and outdated words and images that may be hurtful to particular groups or people.  In the title essays, writers strive to avoid this language in supplemental text and only include these terms where it is deemed necessary to understanding the context in which the newspaper was produced. Title essay authors only use such language in the title of the newspaper, the name of an affiliated organization, part of the self-identification of a person or group, or if we are directly quoting from the newspaper. Even then, the title essays only include these terms if the author deems it necessary to understanding the context in which the newspaper was produced.</p>
+  <p class="backtotop"><a href="#skip_menu">Top</a></p>
+     
+  <a name="digitized-pages"></a>  
   <h3><a id="selected_digitized_newspaper_pages">Selected Digitized Newspaper Pages</a></h3>
 
   <p>The Library of Congress presents the cultural output of the United States in all its diversity. Our collections and the materials we present online speak for their creators, not for the Library or the United States government.  In particular, historical materials should be understood in the context of their particular time and place.</p>
@@ -31,8 +75,14 @@
   </ul>
 
   <p>Chronicling America provides access to these digitized historic materials primarily through a Web interface enhanced with dynamic HTML interactivity for magnification and navigation. Searches are available for both full-text newspaper pages and bibliographic newspaper records (the Newspaper Directory). Pages are displayed in JPEG format, dynamically-created from source files on user request and presented through the browser interface using a combination of Javascript, DHTML and AJAX Web programming.</p>
+  <p class="backtotop"><a href="#skip_menu">Top</a></p>
+     
+  <a name="repository"></a> 
   <h3><a id="preservation_data_repository_and_dissemination_application">Preservation Data Repository and Dissemination Application</a></h3>
   <p>The NDNP repository developed for Chronicling America is based on the Open Archive Information System (OAIS) Reference Model for preservation repository architecture and supported by a variety of modular components to enable long-term sustainability of data ingestion, archival management and data dissemination. The public website is built using the Python programming language, Django Web framework, RDFLib, Apache Solr search server, Apache Web server, and MySQL database engine. For more information, see <a href="https://www.loc.gov/ndnp/">https://www.loc.gov/ndnp/</a> or contact <a href="mailto:ndnptech@loc.gov">ndnptech@loc.gov</a>.</p>
+  <p class="backtotop"><a href="#skip_menu">Top</a></p>
+     
+  <a name="related-resources"></a>   
   <h3><a id="related_resources">Related Resources</a></h3>
 
   <ul>
@@ -41,6 +91,9 @@
   <li>Collections with Newspapers at the Library of Congress - <a href="https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s">https://www.loc.gov/newspapers/collections/?st=gallery&sb=title_s</a></li>
   <li>List of Awardee Institutions and Web sites <a href="https://www.loc.gov/ndnp/listawardees.html">https://www.loc.gov/ndnp/listawardees.html</a></li>
   </ul>
+  <p class="backtotop"><a href="#skip_menu">Top</a></p>   
+  
+  <a name="rights"></a> 
   <h3><a id="rights_and_reproductions">Rights and Reproductions</a></h3>
   {% now "Y" as current_year %}
   <p>The Library of Congress believes that the newspapers in Chronicling America are in the public domain or have no known copyright restrictions.  Newspapers published in the United States more than 95 years ago are in the public domain in their entirety. Any newspapers in Chronicling America that were published less than 95 years ago are also believed to be in the public domain, but may contain some copyrighted third party materials. Researchers using newspapers published less than 95 years ago should be alert for modern content (for example, registered and renewed for copyright and published with notice) that may be copyrighted.  Responsibility for making an independent legal assessment of an item and securing any necessary permissions ultimately rests with persons desiring to use the item.</p>
