Additional updates to left nav
- Add link to Newspaper Navigator to left nav
- Update Flickr link from http to https

--- a/loc/templates/site_base_alt.html
+++ b/loc/templates/site_base_alt.html
@@ -19,7 +19,8 @@
       <li><a href="https://www.loc.gov/ndnp/listawardees.html">NDNP Award Recipients</a></li>
       <li><a href="https://www.loc.gov/rr/news/">Newspaper and Current Periodicals Reading Room</a></li>
       <li><a href="https://ask.loc.gov/">Ask LC Newspaper &amp; Current Periodicals Librarian</a></li>
-      <li><a href="http://www.flickr.com/photos/library_of_congress/collections/72157619370519453/" class="external">Historic Newspapers on Flickr<span> external link</span></a><br />(part of the LC Flickr Commons photostream)</li>
+      <li><a href="https://www.flickr.com/photos/library_of_congress/collections/72157619370519453/" class="external">Historic Newspapers on Flickr<span> external link</span></a><br />(part of the LC Flickr Commons photostream)</li>
+      <li><a href="https://news-navigator.labs.loc.gov/search">Newspaper Navigator</a><br />(Search historic newspaper photos)</li>
     </ul>
   </div>
   </div><!-- end id:left_nav -->
